--- a/app/assets/templates/users/index.html.haml
+++ b/app/assets/templates/users/index.html.haml
@@ -8,7 +8,7 @@
             %span.badge
               {{users.length||0}}
         %div.pull-right
-          %a.btn(ng-click="addUser()")
+          %a.btn(ng-click="addUser()" ng-show="isAdmin")
             %i.fa.fa-circle-plus
             New User
 
